--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Created_Notes">Создать заметку</string>
-    <string name="back">Назад</string>
+    <string name="back">Back</string>
 
 
 </resources>
