--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Created_Notes">Создать заметку</string>
     <string name="back">Back</string>
+    <string name="next_note">next note</string>
+    <string name="about">about</string>
+    <string name="exit">exit</string>
 
 
 </resources>
