Урок 9 добавил Snackbar создал initView() и вынес в него setOnClickListener

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,8 @@
     <string name="click_on_the_button">click on the button</string>
     <string name="clear">Clear</string>
     <string name="button_popup">button popup</string>
-    <string name="view_toast">Показать Toast</string>
+    <string name="showToast">Показать Toast</string>
+    <string name="showSnackbar">Показать SnackBar</string>
 
 
 </resources>
