Урок 9 создал AlertDialog)))

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="showToast">Показать Toast</string>
     <string name="showSnackbar">Показать SnackBar</string>
     <string name="ShowSnackBarWithAction">показать SnackBarWithAction</string>
+    <string name="ShowAlertDialog">показать AlertDialog</string>
 
 
 </resources>
