Урок 9  новый макет dialog_custom.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="showSnackbar">Показать SnackBar</string>
     <string name="ShowSnackBarWithAction">показать SnackBarWithAction</string>
     <string name="ShowAlertDialog">показать AlertDialog</string>
+    <string name="showAlertDialogCustom">показать ShowAlertDialogCustom</string>
+    <string name="show_toast">Show Toast</string>
 
 
 </resources>
