Урок 9  DialogFragment c сохраниением состояния

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="ShowAlertDialog">показать AlertDialog</string>
     <string name="showAlertDialogCustom">показать ShowAlertDialogCustom</string>
     <string name="show_toast">Show Toast</string>
+    <string name="DialogFragment">Показать DialogFragment</string>
 
 
 </resources>
