Урок 9  DialogFragmentCustom c сохраниением состояния (ShowToast)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="showAlertDialogCustom">показать ShowAlertDialogCustom</string>
     <string name="show_toast">Show Toast</string>
     <string name="DialogFragment">Показать DialogFragment</string>
+    <string name="DialogFragmentCustom">Показать DialogFragmentCustom</string>
 
 
 </resources>
